Fix image height problem on safari

--- a/src/styles/components/Product.scss
+++ b/src/styles/components/Product.scss
@@ -21,6 +21,7 @@
 
     @media (max-width: $tablet) {
       max-width: 272px;
+      max-height: 175px;
       border-radius: 5px 0 0 5px;
     }
   }
